--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,14 +1,18 @@
 name: Metrics
 on:
-  schedule: [{cron: "0 * * * *"}]
+  schedule: [{cron: "0 */6 * * *"}]
   workflow_dispatch:
   push: {branches: ["master"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
-      # See action.yml for all options
       - uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
           token: ${{ secrets.METRICS_TOKEN }}
+          
+          plugin_lines: yes
+          plugin_languages: yes
+          plugin_notable: yes
+          plugin_languages_limit: 8
+          plugin_followup: yes
