--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,7 +12,19 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           
           plugin_lines: yes
+          
           plugin_languages: yes
-          plugin_notable: yes
+          plugin_languages_indepth: yes
+          plugin_languages_sections: most-used, recently-used
+          plugin_languages_categories: programming
+          plugin_languages_recent_categories: programming
+          plugin_languages_recent_load: 500
+          plugin_languages_recent_days: 14
           plugin_languages_limit: 8
+          
+          plugin_notable: yes
+          plugin_notable_from: all
+          
           plugin_followup: yes
+          plugin_followup_sections: user
+
