--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -20,11 +20,9 @@ jobs:
           plugin_languages_recent_categories: programming
           plugin_languages_recent_load: 500
           plugin_languages_recent_days: 14
-          plugin_languages_limit: 8
-          
-          plugin_notable: yes
-          plugin_notable_from: all
+          plugin_languages_limit: 6
+          commits_authoring: nikos.epping@protonmail.com, nikos.epping@w-hs.de, n.epping@evosec.de
           
           plugin_followup: yes
           plugin_followup_sections: user
-
+          
