--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          commits_authoring: nikos.epping@protonmail.com, nikos.epping@w-hs.de, n.epping@evosec.de, Nikos410, Nikos Epping
           
           plugin_lines: yes
           
@@ -21,8 +22,7 @@ jobs:
           plugin_languages_recent_load: 500
           plugin_languages_recent_days: 14
           plugin_languages_limit: 6
-          commits_authoring: nikos.epping@protonmail.com, nikos.epping@w-hs.de, n.epping@evosec.de
+          plugin_languages_skipped: 47-11/ones
           
           plugin_followup: yes
           plugin_followup_sections: user
-          
